--- a/.gitmodules
+++ b/.gitmodules
@@ -12,3 +12,8 @@
 	path = OCA/account-financial-tools
 	url = git@github.com:OCA/account-financial-tools.git
 	branch = 13.0
+
+[submodule "karizmaconseil/kzm_accounting"]
+	path = karizmaconseil/kzm_accounting
+	url = git@github.com:karizmaconseil/kzm_accounting.git
+	branch = 13.0
